--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </nav>
     <header class="hero" alt="Group Brainstorming"></header>
     <main class="content">
-        <section class="search-engine-optimization">
+        <section id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Notebook on table with pens, coffee, and laptop" />
             <h2>Search Engine Optimization</h2>
             <p>
